--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -865,10 +865,277 @@ main{
   font-size: var(--fs-4);
   font-weight: var(--fw-700);
   margin:10px 0;
+  text-align: center;
+
 }
 
 .row-sub-text{
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
-  padding:0 30px;
+  text-align: center;
+}
+
+/* OFFERS */
+
+/*-----------------------------------*\
+  #OFFER
+\*-----------------------------------*/
+
+.offer-banner {
+  display: grid;
+  grid-template-columns: 0.7fr 1fr;
+  align-items: center;
+  gap: 30px;
+  margin-block-end: 60px;
+}
+
+.offer-subtitle {
+  font-size: var(--fs-7);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.offer-subtitle .span {
+  color: var(--black);
+  text-transform: uppercase;
+  font-weight: var(--fw-600);
+  letter-spacing: 2px;
+}
+
+.offer .badge { font-weight: var(--fw-500); }
+
+.offer .section-title { margin-block: 20px 8px; }
+
+.offer .section-text { font-size: var(--fs-6); }
+
+.offer .countdown {
+  color: var(--hoockers-green);
+  font-size: var(--fs-2);
+  line-height: 1;
+  display: flex;
+  margin-block: 20px 40px;
+}
+
+.offer .time:not(:last-child)::after {
+  content: ":";
+  color: var(--gray-web);
+  font-size: 3rem;
+  font-weight: var(--fw-500);
+  margin-inline: 10px;
+}
+
+.offer .time {
+  display: flex;
+  align-items: center;
+}
+
+.w-100{
+  width: 100%;
+  height:auto;
+}
+
+
+
+/*-----------------------------------*\
+  #BLOG
+\*-----------------------------------*/
+
+.blog { padding-block-end: calc(var(--section-padding) * 2); }
+
+.blog-card{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  align-items:center;
+}
+.blog .section-title {
+  font-size:var(--fs-2);
+  color:var(--black);
+  text-align:center;
+}
+
+.card-banner{
+  overflow:hidden;
+}
+
+.card-banner img{
+  height: 300px;
+  width: 100%;
+  object-fit:contain;
+  object-position:center;
+}
+.card-banner{
+  margin-bottom:20px;
+}
+
+.blog-card .card-banner img { transition: var(--transition-2); }
+
+.blog-card:is(:hover, :focus-within) .card-banner img { transform: scale(1.2); }
+
+.blog-card .card-title {
+  text-align: center;
+  transition: var(--transition-1);
+  font-size: var(--fs-4);
+  margin-bottom:20px;
+
+}
+
+.blog-card .card-title:is(:hover, :focus) { color: var(--hoockers-green); }
+
+.blog-card .btn-link { display:flex; align-items:center; margin-bottom:20px;  font-size: var(--fs-6);
+
+}
+
+
+
+/*-----------------------------------*\
+  #FOOTER
+\*-----------------------------------*/
+
+.footer .logo { display: none; }
+
+.footer {
+  background-color: var(--cultured-1);
+  padding-block: 70px;
+}
+
+footer .container{
+  padding:20px;
+}
+
+.footer-top {
+  display: grid;
+  gap: 40px;
+  margin-block-end: 60px;
+}
+
+.footer-list-title {
+  color: var(--black);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-600);
+  margin-block-end: 10px;
+}
+
+.footer-list-text { font-size: var(--fs-8); }
+
+.footer-list-text .link {
+  display: inline-block;
+  color: var(--black);
+  font-weight: var(--fw-600);
+  text-decoration: underline;
+  transition: var(--transition-1);
+}
+
+.footer-list-text .link:is(:hover, :focus) { color: var(--hoockers-green); }
+
+.footer-list-text.bold {
+  color: var(--black);
+  font-weight: var(--fw-800);
+  margin-block: 15px 2px;
+}
+
+.footer-link {
+  font-size: var(--fs-7);
+  padding-block: 5px;
+}
+
+.footer-link:is(:hover, :focus) { text-decoration: underline; }
+
+.newsletter-title {
+  color: var(--black);
+  font-size: var(--fs-3);
+  font-weight: var(--fw-600);
+  line-height: 1.3;
+}
+
+.newsletter-text {
+  font-size: var(--fs-7);
+  line-height: 2;
+  margin-block: 10px 35px;
+}
+
+.newsletter-form { position: relative; }
+
+.email-field {
+  background-color: var(--white);
+  font-size: var(--fs-7);
+  padding: 12px 18px;
+  padding-inline-end: 145px;
+  border: 1px solid var(--hoockers-green_20);
+  border-radius: var(--radius-3);
+  outline: none;
+  transition: var(--transition-1);
+}
+
+.email-field::placeholder { color: var(--spanish-gray); }
+
+.email-field:focus { border-color: var(--black); }
+
+.newsletter-form .btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.copyright { font-size: var(--fs-7); }
+
+.footer-bottom .wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+  margin-block-end: 20px;
+}
+
+.social-list {
+  display: flex;
+  gap: 20px;
+}
+
+.social-link {
+  color: var(--black);
+  font-size: 18px;
+  transition: var(--transition-1);
+}
+
+.social-link:is(:hover, :focus) { color: var(--hoockers-green); }
+
+.footer-bottom > img { max-width: max-content; }
+
+
+
+
+
+/*-----------------------------------*\
+  #BACK TO TOP
+\*-----------------------------------*/
+
+.back-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  background-color: var(--white);
+  color: var(--hoockers-green);
+  font-size: 22px;
+  padding: 13px;
+  border-radius: 50%;
+  box-shadow: var(--shadow-1);
+  z-index: 4;
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition-1);
+}
+
+.back-top-btn:is(:hover, :focus) {
+  background-color: var(--hoockers-green);
+  color: var(--white);
+}
+
+.back-top-btn.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(-10px);
 }
